// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography variant "bodyA" renders correctly 1`] = `
<DocumentFragment>
  .cache-p2wm6i-StyledText-bodyA-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

<p
    class="e1g1zfwd0 cache-p2wm6i-StyledText-bodyA-variantStyles"
  >
    bodyA
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyA" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-r7v1w4-StyledText-bodyA-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-r7v1w4-StyledText-bodyA-variantStyles-ellipsis.cache-r7v1w4-StyledText-bodyA-variantStyles-ellipsis {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-r7v1w4-StyledText-bodyA-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyB" renders correctly 1`] = `
<DocumentFragment>
  .cache-1ynz51z-StyledText-bodyB-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

<p
    class="e1g1zfwd0 cache-1ynz51z-StyledText-bodyB-variantStyles"
  >
    bodyB
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyB" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-154z0ax-StyledText-bodyB-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-154z0ax-StyledText-bodyB-variantStyles-ellipsis.cache-154z0ax-StyledText-bodyB-variantStyles-ellipsis {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-154z0ax-StyledText-bodyB-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyC" renders correctly 1`] = `
<DocumentFragment>
  .cache-1iwlirh-StyledText-bodyC-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<p
    class="e1g1zfwd0 cache-1iwlirh-StyledText-bodyC-variantStyles"
  >
    bodyC
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyC" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1ldjdn9-StyledText-bodyC-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1ldjdn9-StyledText-bodyC-variantStyles-ellipsis.cache-1ldjdn9-StyledText-bodyC-variantStyles-ellipsis {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-1ldjdn9-StyledText-bodyC-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyD" renders correctly 1`] = `
<DocumentFragment>
  .cache-4d8nfy-StyledText-bodyD-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

<p
    class="e1g1zfwd0 cache-4d8nfy-StyledText-bodyD-variantStyles"
  >
    bodyD
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyD" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-5aszd1-StyledText-bodyD-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-5aszd1-StyledText-bodyD-variantStyles-ellipsis.cache-5aszd1-StyledText-bodyD-variantStyles-ellipsis {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-5aszd1-StyledText-bodyD-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "command" renders correctly 1`] = `
<DocumentFragment>
  .cache-i5d2y8-StyledText-command-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: JetBrains;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #151a2d;
  background-color: #f6f6f8;
  padding: 8px;
}

<code
    class="e1g1zfwd0 cache-i5d2y8-StyledText-command-variantStyles"
  >
    command
  </code>
</DocumentFragment>
`;

exports[`Typography variant "command" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-18oa5fy-StyledText-command-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: JetBrains;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #151a2d;
  background-color: #f6f6f8;
  padding: 8px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-18oa5fy-StyledText-command-variantStyles-ellipsis.cache-18oa5fy-StyledText-command-variantStyles-ellipsis {
  width: 100px;
}

<code
    class="e1g1zfwd0 cache-18oa5fy-StyledText-command-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </code>
</DocumentFragment>
`;

exports[`Typography variant "default" renders correctly 1`] = `
<DocumentFragment>
  .cache-i7tymf-StyledText-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="e1g1zfwd0 cache-i7tymf-StyledText-variantStyles"
  >
    default
  </div>
</DocumentFragment>
`;

exports[`Typography variant "default" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-19poeyd-StyledText-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-19poeyd-StyledText-variantStyles-ellipsis.cache-19poeyd-StyledText-variantStyles-ellipsis {
  width: 100px;
}

<div
    class="e1g1zfwd0 cache-19poeyd-StyledText-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </div>
</DocumentFragment>
`;

exports[`Typography variant "description" renders correctly 1`] = `
<DocumentFragment>
  .cache-1w23mlj-StyledText-description-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
}

<p
    class="e1g1zfwd0 cache-1w23mlj-StyledText-description-variantStyles"
  >
    description
  </p>
</DocumentFragment>
`;

exports[`Typography variant "description" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-e8pg1l-StyledText-description-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-e8pg1l-StyledText-description-variantStyles-ellipsis.cache-e8pg1l-StyledText-description-variantStyles-ellipsis {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-e8pg1l-StyledText-description-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "hero" renders correctly 1`] = `
<DocumentFragment>
  .cache-1mptl2a-StyledText-hero-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 35px;
  line-height: 41px;
  margin-bottom: 72px;
}

<h1
    class="e1g1zfwd0 cache-1mptl2a-StyledText-hero-variantStyles"
  >
    hero
  </h1>
</DocumentFragment>
`;

exports[`Typography variant "hero" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1w6u5jk-StyledText-hero-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 35px;
  line-height: 41px;
  margin-bottom: 72px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1w6u5jk-StyledText-hero-variantStyles-ellipsis.cache-1w6u5jk-StyledText-hero-variantStyles-ellipsis {
  width: 100px;
}

<h1
    class="e1g1zfwd0 cache-1w6u5jk-StyledText-hero-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h1>
</DocumentFragment>
`;

exports[`Typography variant "lead" renders correctly 1`] = `
<DocumentFragment>
  .cache-10wzxxp-StyledText-lead-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

<h2
    class="e1g1zfwd0 cache-10wzxxp-StyledText-lead-variantStyles"
  >
    lead
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1yhp1yx-StyledText-lead-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1yhp1yx-StyledText-lead-variantStyles-ellipsis.cache-1yhp1yx-StyledText-lead-variantStyles-ellipsis {
  width: 100px;
}

<h2
    class="e1g1zfwd0 cache-1yhp1yx-StyledText-lead-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-block" renders correctly 1`] = `
<DocumentFragment>
  .cache-1a3yyht-StyledText-lead-lead-block-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

<h2
    class="e1g1zfwd0 cache-1a3yyht-StyledText-lead-lead-block-variantStyles"
  >
    lead-block
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-block" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-sih39i-StyledText-lead-lead-block-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-sih39i-StyledText-lead-lead-block-variantStyles-ellipsis.cache-sih39i-StyledText-lead-lead-block-variantStyles-ellipsis {
  width: 100px;
}

<h2
    class="e1g1zfwd0 cache-sih39i-StyledText-lead-lead-block-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-text" renders correctly 1`] = `
<DocumentFragment>
  .cache-1a9k21u-StyledText-lead-lead-text-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 24px;
}

<h2
    class="e1g1zfwd0 cache-1a9k21u-StyledText-lead-lead-text-variantStyles"
  >
    lead-text
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-text" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-16rvzj8-StyledText-lead-lead-text-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-16rvzj8-StyledText-lead-lead-text-variantStyles-ellipsis.cache-16rvzj8-StyledText-lead-lead-text-variantStyles-ellipsis {
  width: 100px;
}

<h2
    class="e1g1zfwd0 cache-16rvzj8-StyledText-lead-lead-text-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "link" renders correctly 1`] = `
<DocumentFragment>
  .cache-1dym78f-StyledText-link-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #3f6ed8;
}

.cache-1dym78f-StyledText-link-variantStyles:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="e1g1zfwd0 cache-1dym78f-StyledText-link-variantStyles"
  >
    link
  </div>
</DocumentFragment>
`;

exports[`Typography variant "link" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-vuni90-StyledText-link-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #3f6ed8;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-vuni90-StyledText-link-variantStyles-ellipsis.cache-vuni90-StyledText-link-variantStyles-ellipsis {
  width: 100px;
}

.cache-vuni90-StyledText-link-variantStyles-ellipsis:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="e1g1zfwd0 cache-vuni90-StyledText-link-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </div>
</DocumentFragment>
`;

exports[`Typography variant "samplecode" renders correctly 1`] = `
<DocumentFragment>
  .cache-1jxpoxd-StyledText-samplecode-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #f6f6f8;
  color: #151a2d;
  font-size: 12px;
  line-height: 16px;
  padding: 4px;
}

<code
    class="e1g1zfwd0 cache-1jxpoxd-StyledText-samplecode-variantStyles"
  >
    samplecode
  </code>
</DocumentFragment>
`;

exports[`Typography variant "samplecode" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1mm5vgx-StyledText-samplecode-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #f6f6f8;
  color: #151a2d;
  font-size: 12px;
  line-height: 16px;
  padding: 4px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1mm5vgx-StyledText-samplecode-variantStyles-ellipsis.cache-1mm5vgx-StyledText-samplecode-variantStyles-ellipsis {
  width: 100px;
}

<code
    class="e1g1zfwd0 cache-1mm5vgx-StyledText-samplecode-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </code>
</DocumentFragment>
`;

exports[`Typography variant "tiny" renders correctly 1`] = `
<DocumentFragment>
  .cache-fjkhj1-StyledText-tiny-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 12px;
  line-height: 16px;
}

<small
    class="e1g1zfwd0 cache-fjkhj1-StyledText-tiny-variantStyles"
  >
    tiny
  </small>
</DocumentFragment>
`;

exports[`Typography variant "tiny" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-61cboe-StyledText-tiny-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 12px;
  line-height: 16px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-61cboe-StyledText-tiny-variantStyles-ellipsis.cache-61cboe-StyledText-tiny-variantStyles-ellipsis {
  width: 100px;
}

<small
    class="e1g1zfwd0 cache-61cboe-StyledText-tiny-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </small>
</DocumentFragment>
`;

exports[`Typography variant "title" renders correctly 1`] = `
<DocumentFragment>
  .cache-dndw9n-StyledText-title-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 21px;
  line-height: 24px;
}

<h3
    class="e1g1zfwd0 cache-dndw9n-StyledText-title-variantStyles"
  >
    title
  </h3>
</DocumentFragment>
`;

exports[`Typography variant "title" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1axnfwb-StyledText-title-variantStyles-ellipsis {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 21px;
  line-height: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1axnfwb-StyledText-title-variantStyles-ellipsis.cache-1axnfwb-StyledText-title-variantStyles-ellipsis {
  width: 100px;
}

<h3
    class="e1g1zfwd0 cache-1axnfwb-StyledText-title-variantStyles-ellipsis"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h3>
</DocumentFragment>
`;

exports[`Typography with maxLines renders correctly 1`] = `
<DocumentFragment>
  .cache-1s6bbh0-StyledText-bodyB-variantStyles-clamp {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  -webkit-line-clamp: 2;
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

<p
    class="e1g1zfwd0 cache-1s6bbh0-StyledText-bodyB-variantStyles-clamp"
  >
    Hello
  </p>
</DocumentFragment>
`;

exports[`Typography with multiple nested chidldren renders correctly 1`] = `
<DocumentFragment>
  .cache-1s6bbh0-StyledText-bodyB-variantStyles-clamp {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  -webkit-line-clamp: 2;
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.cache-dndw9n-StyledText-title-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 21px;
  line-height: 24px;
}

<p
    class="e1g1zfwd0 cache-1s6bbh0-StyledText-bodyB-variantStyles-clamp"
  >
    Lorem
    <span>
      Ipsum
    </span>
    <span
      class="e1g1zfwd0 cache-dndw9n-StyledText-title-variantStyles"
    >
      <span>
        Dolor
      </span>
    </span>
    Sit
  </p>
</DocumentFragment>
`;
